[Misc] Replace Stream.collect(Collectors.toList()) with Stream.toList()
* Fix SonarQube java:S6204 across several modules by replacing
  Stream.collect(Collectors.toList()) with Stream.toList() and removing the
  now-unused Collectors imports.

Co-Authored-By: Vincent Massol <vincent@massol.net>